--- a/express server/package.json
+++ b/express server/package.json
@@ -10,6 +10,7 @@
   "author": "José Lucas <josluc2016@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1"
   }
 }
